# dp-online-pipeline

./: .gitignore  README.md  cameraman_model.py  detector_model.py  dp_live_config.json  equirectangular_model.py  func_wrapper.py  image_transformer.py  main.py  reader.py  set_config_from_opencv.py  shared_image_manager.py  std_sender.py  sub_tasks.py  utils.py
cpp/: CMakeList  CMakeLists.txt
cpp/src/: camera.hpp  equirectangular.cpp  equirectangular.hpp  image.cpp  image.hpp  paranoma.cpp  paranoma.hpp
tracker/: byte_tracker.py
